// =============================================================================
//  Copyright 2022 Haveno
//
//  Licensed under the Apache License, Version 2.0 (the "License");
//  you may not use this file except in compliance with the License.
//  You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
//  Unless required by applicable law or agreed to in writing, software
//  distributed under the License is distributed on an "AS IS" BASIS,
//  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//  See the License for the specific language governing permissions and
//  limitations under the License.
// =============================================================================

import { describe, expect, it } from "vitest";
import { render } from "@testing-library/react";
import { Percentage } from "./Percentage";

describe("atoms::Percentage", () => {
  it("renders without exploding", () => {
    const { asFragment } = render(<Percentage value={0.1} />);
    expect(asFragment()).toMatchSnapshot();
  });

  it("renders value", () => {
    const { asFragment } = render(<Percentage value={0.1} />);
    expect(asFragment()).toMatchSnapshot();
  });

  it("renders decimal value", () => {
    const { asFragment } = render(<Percentage value={0.123456} />);
    expect(asFragment()).toMatchSnapshot();
  });
});
