// Vitest Snapshot v1

exports[`atoms::Percentage > renders decimal value 1`] = `
<DocumentFragment>
  %12.3456
</DocumentFragment>
`;

exports[`atoms::Percentage > renders value 1`] = `
<DocumentFragment>
  %10
</DocumentFragment>
`;

exports[`atoms::Percentage > renders without exploding 1`] = `
<DocumentFragment>
  %10
</DocumentFragment>
`;
